Upgrading to Bootstrap4

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,3 +1,14 @@
+/*Meant for Split Dropdown Menus*/
+
+.dropdown-menu {
+  transform: translate(0px, 36px) !important;
+}
+
+.dropdown-toggle-split + .dropdown-menu {
+  transform: translate(0px, 36px) !important;
+}
+
+/*Sample CSS*/
 .red-sec {
   background-color:#F46A6A;
   position:relative;
