--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -8,6 +8,17 @@
   transform: translate(0px, 36px) !important;
 }
 
+/* Light/Dark Mode */
+body {
+  background-color: white;
+  color: black;
+}
+
+.dark-mode {
+  color:white;
+  background-color:#000;
+}
+
 /*Sample CSS*/
 
 .dark-sec {
